
 - #5688, [topology] topology building functions now interpret tolerance 0
          (old default) to really mean 0 and want -1 (new default) to mean
          "use topology precision" (Sandro Santilli)


* New Features *

 - #5993, [topology] Add max_edges parameter to TopoGeo_AddLinestring
          (Sandro Santilli)
 - #6001, support MultiLineString in ST_MakeLine (Paul Ramsey)
 - #2858, ST_MMin and STMMax (Paul Ramsey)


PostGIS 3.6.0
2025/09/01

This version requires PostgreSQL 12-18beta3, GEOS 3.8 or higher, and Proj 6.1+.
To take advantage of all features, GEOS 3.14+ is needed.
To take advantage of all SFCGAL features, SFCGAL 2.2+ is needed.

Many thanks to our translation teams, in particular:

Teramoto Ikuhiro (Japanese Team)
Daniel Nylander (Swedish Team)
Dapeng Wang, Zuo Chenwei from HighGo (Chinese Team)
Denys Kovshun (Ukrainian Team)

* Breaking Changes *

  - #5799, make ST_TileEnvelope clips envelopes to tile plane extent (Paul Ramsey)
  - #5829, remove constraint checking from geometry_columns view (Paul Ramsey)
  - #3373, GT-255, [topology] Support for upgrading domains (Ayo Adesugba, U.S. Census Bureau)
  - GT-252, ST_NumGeometries/ST_GeometryN treat TIN and PolyhedralSurface as unitary geometries,
    use ST_NumPatches/ST_PatchN for patch access (Loïc Bartoletti)
  - #3110, GT-242 [topology] Support for bigint (Ayo Adesugba, U.S. Census Bureau)
  - #5359, #5897, GT-260 [tiger_geocoder] Use @extschema:extension@ for PG >= 16
    to schema qualify dependent extensions, switch to use typmod for tiger tables
    (Regina Obe)

* Deprecated / Removed signatures *

 - #3110, GT-242, [topology] numerous topology functions that accepted integer
          replaced with bigint versions to support both integer and bigint inputs
          (Ayo Adesugba, U.S. Census Bureau)
 - #5498 Drop st_approxquantile(raster, double precision), wasn't usable as it triggered
    is not unique error when used (Regina Obe)

* New Features *
